--- a/my_html_workbook.html
+++ b/my_html_workbook.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>HTML Forms</h1>
-    
+
     <form>
         <label for="fname">First name:</label><br>
         <input type="text" id="fname" name="fname"><br>
@@ -29,6 +29,10 @@
     frameborder="0" allowfullscreen>
 
     </iframe>
+
+    <form action="./geolocation_page.html" method="get">
+        <button type="submit">Go to Geolocation page</button>
+      </form>
 
 </body>
 </html>
